--- a/src/web/templates/general/search.html
+++ b/src/web/templates/general/search.html
@@ -28,7 +28,7 @@
                 </div>
 
                 <div class="cp-form-group col-md-2">
-                    <label class="cp-form-label" for="head_count">How many people?</label>
+                    <label class="cp-form-label" for="head_count">No. of people?</label>
                     <select class="cp-form-control"
                         id="head_count"
                         ng-model="search.headCount"
