--- a/src/web/templates/general/view-package.html
+++ b/src/web/templates/general/view-package.html
@@ -158,7 +158,7 @@
 
                     <div class="cp-form-group">
                         <label class="cp-form-label" for="order_head_count">
-                            How many people?
+                            No. of people?
                             <span class="form-element-invalid" ng-show="packageForm.$submitted && packageForm.orderHeadCount.$error.required">Please specify the number of people</span>
                         </label>
                         <select class="cp-form-control" id="order_head_count" name="orderHeadCount" required aria-required="true" ng-model="order.headCount" ng-options="option for option in packageHeadCountOptions"></select>
