Language: change "Budget per person" to "Max. budget per person".

--- a/src/web/templates/general/search.html
+++ b/src/web/templates/general/search.html
@@ -48,7 +48,7 @@
                 </div>
 
                 <div class="cp-form-group col-md-3">
-                    <label class="cp-form-label" for="budget_per_person">Budget per person</label>
+                    <label class="cp-form-label" for="budget_per_person">Max. budget per person</label>
                     <input class="cp-search-budget-per-person-input"
                         id="budget_per_person"
                         type="range"
