--- a/src/web/templates/directives/cp-checkout-review.html
+++ b/src/web/templates/directives/cp-checkout-review.html
@@ -1,17 +1,17 @@
 <aside class="cp-checkout-review">
-    <!-- @todo - cp-package-card -->
+    <cp-package-card package="package"></cp-package-card>
 
     <section class="cp-checkout-review-detail">
         <h3 class="cp-heading cp-checkout-review-heading">Your order</h3>
         <dl>
             <dt>Delivery location</dt>
-            <dd>{{ postcode }}</dd>
+            <dd id="delivery_location">{{ postcode }}</dd>
 
             <dt>Date &#38; time</dt>
-            <dd>{{ deliveryDate | date:'dd/MM/yy HH:mm' }}</dd>
+            <dd id="delivery_date">{{ deliveryDate | date:'dd/MM/yy HH:mm' }}</dd>
 
             <dt>People</dt>
-            <dd>{{ headCount }}</dd>
+            <dd id="head_count">{{ headCount }}</dd>
         </dl>
         <a class="cp-checkout-review-detail-edit" href="@todo">Edit<span class="sr-only"> order</span></a>
     </section>
@@ -25,7 +25,7 @@
                         'other': '{} people'}">
                 </ng-pluralize>
             </dt>
-            <dd>{{ subTotalAmount | currency:'£':2 }}</dd>
+            <dd id="sub_total_amount">{{ subTotalAmount | currency:'£':2 }}</dd>
 
             <dt ng-if="isCutleryAndServiettesRequired">Cutlery &#38; serviettes</dt>
             <dd ng-if="isCutleryAndServiettesRequired">-</dd>
@@ -37,13 +37,13 @@
             <dd ng-if="isVendorRequiredToCleanUp">{{ vendorCleanupCost | currency:'£':2 }}</dd>
 
             <dt ng-if="deliveryCost === 0"><span class="text-uppercase">Free</span> delivery</dt>
-            <dd ng-if="deliveryCost === 0">-</dd>
+            <dd id="free_delivery" ng-if="deliveryCost === 0">-</dd>
 
             <dt ng-if="deliveryCost > 0">Delivery</dt>
-            <dd ng-if="deliveryCost > 0">{{ deliveryCost | currency:'£':2 }}</dd>
+            <dd id="delivery_cost" ng-if="deliveryCost > 0">{{ deliveryCost | currency:'£':2 }}</dd>
 
             <dt class="cp-checkout-review-detail-total">Total</dt>
-            <dd class="cp-checkout-review-detail-total">{{ totalAmount | currency:'£':2 }}</dd>
+            <dd id="total_amount" class="cp-checkout-review-detail-total">{{ totalAmount | currency:'£':2 }}</dd>
         </dl>
     </section>
 </aside>
