--- a/src/web/templates/general/checkout-delivery-details.html
+++ b/src/web/templates/general/checkout-delivery-details.html
@@ -14,16 +14,16 @@
             <div ng-if="!isNewDeliveryAddress">
                 <p>{{ package.vendor.name }} will deliver your package to:</p>
 
-                <p class="cp-checkout-address" ng-if="address">{{ address | addressSingleLineFormatter }}</p>
+                <p class="cp-checkout-address" ng-bind-html="address | addressSingleLineFormatter:'<br />'"></p>
 
                 <hr />
 
-                <form class="cp-form cp-checkout-form" name="checkoutForm" novalidate role="form">
+                <form class="cp-form cp-checkout-form" name="forms.checkoutForm" novalidate role="form">
                     <fieldset>
                         <div class="cp-form-group">
                             <label class="cp-form-label" for="office_manager_name">
                                 Contact name on arrival
-                                <span class="form-element-invalid" ng-show="checkoutForm.$submitted && checkoutForm.officeManagerName.$error.required">Contact name is required</span>
+                                <span class="form-element-invalid" ng-show="forms.checkoutForm.$submitted && forms.checkoutForm.officeManagerName.$error.required">Contact name is required</span>
                             </label>
                             <input class="cp-form-control"
                                 id="office_manager_name"
@@ -37,7 +37,7 @@
                         <div class="cp-form-group">
                             <label class="cp-form-label" for="landline_number">
                                 Phone/Mobile
-                                <span class="form-element-invalid" ng-show="checkoutForm.$submitted && checkoutForm.landlineNumber.$error.required">Phone/Mobile is required</span>
+                                <span class="form-element-invalid" ng-show="forms.checkoutForm.$submitted && forms.checkoutForm.landlineNumber.$error.required">Phone/Mobile is required</span>
                             </label>
                             <input class="cp-form-control"
                                 id="landline_number"
