--- a/src/web/templates/directives/cp-address-form-for-customer.html
+++ b/src/web/templates/directives/cp-address-form-for-customer.html
@@ -84,8 +84,8 @@
 
     <div class="cp-form-group">
         <label class="cp-form-label" for="landline_number">
-            Landline number
-            <span class="form-element-invalid" ng-show="form.$submitted && form.LandlineNumber.$error.required">(Landline number is required.)</span>
+            Contact number
+            <span class="form-element-invalid" ng-show="form.$submitted && form.LandlineNumber.$error.required">(Contact number is required.)</span>
         </label>
 
         <input class="cp-form-control" id="landline_number" name="landlineNumber" type="tel"
