--- a/src/web/templates/auth/login-register.html
+++ b/src/web/templates/auth/login-register.html
@@ -41,7 +41,7 @@
             </fieldset>
         </form>
 
-        <a class="cp-btn cp-btn-primary cp-btn-block cp-login-sign-up" href="@todo">New to City Pantry? <span>Sign up</span></a>
+        <a class="cp-btn cp-btn-primary cp-btn-block cp-login-sign-up" href="/register">New to City Pantry? <span>Sign up</span></a>
     </div>
 </div>
 
