Apply styling to all remaining forms.

--- a/src/web/templates/auth/reset-password.html
+++ b/src/web/templates/auth/reset-password.html
@@ -3,15 +3,15 @@
 
     <form role="form" ng-submit="reset()">
         <fieldset>
-            <div class="form-group">
-                <label for="new">New Password</label>
-                <input class="form-control" ng-model="newPassword" id="new" name="new" type="password"
+            <div class="cp-form-group">
+                <label class="cp-form-label" for="new">New Password</label>
+                <input class="cp-form-control" ng-model="newPassword" id="new" name="new" type="password"
                     required aria-required="true">
             </div>
 
-            <div class="form-group">
-                <label for="confirm">Confirm Password</label>
-                <input class="form-control" ng-model="confirmPassword" id="confirm" name="confirm" type="password"
+            <div class="cp-form-group">
+                <label class="cp-form-label" for="confirm">Confirm Password</label>
+                <input class="cp-form-control" ng-model="confirmPassword" id="confirm" name="confirm" type="password"
                     required aria-required="true">
             </div>
 
