--- a/src/web/templates/customer/change-password.html
+++ b/src/web/templates/customer/change-password.html
@@ -3,21 +3,21 @@
 
     <form role="form" ng-submit="save()">
         <fieldset>
-            <div class="form-group">
-                <label for="current">Current password</label>
-                <input class="form-control" ng-model="currentPassword" id="current" name="current" type="password"
+            <div class="cp-form-group">
+                <label class="cp-form-label" for="current">Current password</label>
+                <input class="cp-form-control" ng-model="currentPassword" id="current" name="current" type="password"
                     required aria-required="true" />
             </div>
 
-            <div class="form-group">
-                <label for="new">New password</label>
-                <input class="form-control" ng-model="newPassword" id="new" name="new" type="password"
+            <div class="cp-form-group">
+                <label class="cp-form-label" for="new">New password</label>
+                <input class="cp-form-control" ng-model="newPassword" id="new" name="new" type="password"
                     required aria-required="true" />
             </div>
 
-            <div class="form-group">
-                <label for="confirm">Confirm password</label>
-                <input class="form-control" ng-model="confirmPassword" id="confirm" name="confirm" type="password"
+            <div class="cp-form-group">
+                <label class="cp-form-label" for="confirm">Confirm password</label>
+                <input class="cp-form-control" ng-model="confirmPassword" id="confirm" name="confirm" type="password"
                     required aria-required="true" />
             </div>
 
