--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -722,7 +722,12 @@ body {
     width: auto;
 }
 
-#card-expiry-year {
+#card-expiry-month-block {
+    float: left;
+}
+
+#card-expiry-year-block {
+    float: left;
     margin-left: 10px;
 }
 
