--- a/src/web/templates/directives/cp-address-form-for-vendor.html
+++ b/src/web/templates/directives/cp-address-form-for-vendor.html
@@ -1,60 +1,60 @@
 <form name="form" ng-submit="save()">
     <p class="form-error" ng-show="error" ng-bind="error"></p>
 
-    <div class="form-group">
-        <label for="address_label">
+    <div class="cp-form-group">
+        <label class="cp-form-label" for="address_label">
             {{ isNew ? 'Save address as...' : 'Saved location' }}
         </label>
 
-        <input class="form-control" id="address_label" name="addressLabel"
+        <input class="cp-form-control" id="address_label" name="addressLabel"
             ng-model="address.label" size="30" />
     </div>
 
     <hr />
 
-    <div class="form-group">
-        <label for="address_line1">
+    <div class="cp-form-group">
+        <label class="cp-form-label" for="address_line1">
             Address line 1
             <span class="form-element-invalid" ng-show="form.$submitted && form.addressLine1.$error.required">(Address line 1 is required.)</span>
         </label>
 
-        <input class="form-control" id="address_line1" name="addressLine1"
+        <input class="cp-form-control" id="address_line1" name="addressLine1"
             required aria-required="true"
             ng-model="address.addressLine1" size="50" />
     </div>
 
-    <div class="form-group">
-        <label for="address_line2">Address line 2</label>
+    <div class="cp-form-group">
+        <label class="cp-form-label" for="address_line2">Address line 2</label>
 
-        <input class="form-control" id="address_line2" name="addressLine2"
+        <input class="cp-form-control" id="address_line2" name="addressLine2"
             ng-model="address.addressLine2" size="50" />
     </div>
 
-    <div class="form-group">
-        <label for="address_line3">Address line 3</label>
+    <div class="cp-form-group">
+        <label class="cp-form-label" for="address_line3">Address line 3</label>
 
-        <input class="form-control" id="address_line3" name="addressLine3"
+        <input class="cp-form-control" id="address_line3" name="addressLine3"
             ng-model="address.addressLine3" size="50" />
     </div>
 
-    <div class="form-group" id="form-group-city">
-        <label for="city">
+    <div class="cp-form-group" id="form-group-city">
+        <label class="cp-form-label" for="city">
             Town/City
             <span class="form-element-invalid" ng-show="form.$submitted && form.city.$error.required">(City is required.)</span>
         </label>
 
-        <input class="form-control" id="city" name="city" required aria-required="true"
+        <input class="cp-form-control" id="city" name="city" required aria-required="true"
             ng-model="address.city" size="20" />
     </div>
 
-    <div class="form-group">
-        <label for="postcode">
+    <div class="cp-form-group">
+        <label class="cp-form-label" for="postcode">
             Postcode
             <span class="form-element-invalid" ng-show="form.$submitted && form.postcode.$error.required">(Postcode is required.)</span>
             <span class="form-element-invalid" ng-show="form.$submitted && form.postcode.$error.pattern">(Postcode is invalid.)</span>
         </label>
 
-        <input class="form-control" id="postcode" name="postcode" size="10"
+        <input class="cp-form-control" id="postcode" name="postcode" size="10"
             required aria-required="true"
             ng-model="address.postcode"
             ng-pattern="/[a-zA-Z]{1,2}[0-9][0-9A-Za-z]?\s?[0-9][a-zA-Z]{2}/" />
@@ -62,32 +62,32 @@
 
     <hr />
 
-    <div class="form-group">
-        <label for="contact_name">
+    <div class="cp-form-group">
+        <label class="cp-form-label" for="contact_name">
             Contact name
             <span class="form-element-invalid" ng-show="form.$submitted && form.contactName.$error.required">(Contact name is required.)</span>
         </label>
 
-        <input class="form-control" id="contact_name" name="contactName" required aria-required="true" ng-model="address.contactName" />
+        <input class="cp-form-control" id="contact_name" name="contactName" required aria-required="true" ng-model="address.contactName" />
     </div>
 
-    <div class="form-group">
-        <label for="landline_number">
+    <div class="cp-form-group">
+        <label class="cp-form-label" for="landline_number">
             Landline number
             <span class="form-element-invalid" ng-show="form.$submitted && form.LandlineNumber.$error.required">(Landline number is required.)</span>
         </label>
 
-        <input class="form-control" id="landline_number" name="landlineNumber" type="tel" required aria-required="true" ng-model="address.landlineNumber" />
+        <input class="cp-form-control" id="landline_number" name="landlineNumber" type="tel" required aria-required="true" ng-model="address.landlineNumber" />
     </div>
 
-    <div class="form-group">
-        <label for="order_notification_mobile_number">
+    <div class="cp-form-group">
+        <label class="cp-form-label" for="order_notification_mobile_number">
             Order notification mobile number
             <span class="form-element-invalid" ng-show="form.$submitted && form.orderNotificationMobileNumber.$error.required">(Order notification mobile number is required.)</span>
             <span class="form-element-invalid" ng-show="form.$submitted && form.orderNotificationMobileNumber.$error.pattern">(Order notification mobile number is invalid.)</span>
         </label>
 
-        <input class="form-control" id="order_notification_mobile_number" name="orderNotificationMobileNumber" type="tel" required aria-required="true" ng-model="address.orderNotificationMobileNumber" ng-pattern="/^(\+44\s?7\d{3}|\(?07\d{3}\)?)\s?\d{3}\s?\d{3}$/" />
+        <input class="cp-form-control" id="order_notification_mobile_number" name="orderNotificationMobileNumber" type="tel" required aria-required="true" ng-model="address.orderNotificationMobileNumber" ng-pattern="/^(\+44\s?7\d{3}|\(?07\d{3}\)?)\s?\d{3}\s?\d{3}$/" />
     </div>
 
     <hr />
