--- a/src/web/templates/user/new-payment-card.html
+++ b/src/web/templates/user/new-payment-card.html
@@ -13,36 +13,42 @@
 
             <form id="add-card-form" role="form" name="paymentCardForm" ng-submit="save()">
                 <fieldset>
-                    <div class="form-group">
-                        <label for="card-number">Card number</label>
-                        <input class="form-control" id="card-number" type="number"
+                    <div class="cp-form-group">
+                        <label class="cp-form-label" for="card-number">Card number</label>
+                        <input class="cp-form-control" id="card-number" type="number"
                             size="30" autocomplete="off" required data-braintree-name="number"
                             ng-minlength="13" ng-maxlength="16" ng-model="card.number" />
                     </div>
 
-                    <div class="form-group expiry-date">
-                        <label for="card-expiry-month">Expiry date</label>
+                    <div class="cp-form-group expiry-date">
+                        <div id="card-expiry-month-block">
+                            <label class="cp-form-label" for="card-expiry-month">Expiry date</label>
 
-                        <select class="form-control" id="card-expiry-month" required
-                            data-braintree-name="expiration_month" ng-model="card.expirationMonth"
-                            ng-options="month.value as month.label for month in monthOptions">
-                        </select>
+                            <select class="cp-form-control" id="card-expiry-month" required
+                                data-braintree-name="expiration_month" ng-model="card.expirationMonth"
+                                ng-options="month.value as month.label for month in monthOptions">
+                            </select>
+                        </div>
 
-                        <label class="sr-only" for="card-expiry-year">Expiry year</label>
+                        <div id="card-expiry-year-block">
+                            <label class="cp-form-label" class="sr-only" for="card-expiry-year">Expiry year</label>
 
-                        <select class="form-control" id="card-expiry-year" required
-                            data-braintree-name="expiration_year" ng-model="card.expirationYear"
-                            ng-options="year.value as year.label for year in yearOptions">
-                        </select>
+                            <select class="cp-form-control" id="card-expiry-year" required
+                                data-braintree-name="expiration_year" ng-model="card.expirationYear"
+                                ng-options="year.value as year.label for year in yearOptions">
+                            </select>
+                        </div>
+
+                        <div class="clearfix"></div>
                     </div>
 
-                    <div class="form-group">
-                        <label for="card-cvc">
+                    <div class="cp-form-group">
+                        <label class="cp-form-label" for="card-cvc">
                             <abbr title="card verification code">CVC</abbr>
                             <a href="#" data-toggle="tooltip" title="Last 3 digits on the back">?</a>
                         </label>
 
-                        <input class="form-control" id="card-cvc" type="number" size="4"
+                        <input class="cp-form-control" id="card-cvc" type="number" size="4"
                             autocomplete="off" ng-pattern="/\d\d\d/" required data-braintree-name="cvc"
                             ng-minlength="3" ng-maxlength="4" maxlength="4" ng-model="card.cvc" />
                     </div>
