Dashboard: added package to “next order”.

--- a/src/web/scss/partials/_cp-dashboard.scss
+++ b/src/web/scss/partials/_cp-dashboard.scss
@@ -35,6 +35,10 @@
         @extend .clearfix;
         margin-bottom: $cp-margin-small-vertical;
     }
+
+    .cp-package-card-price {
+        display: block !important;
+    }
 }
 
 .cp-dashboard-order-heading {
