Pass search params to package page.

--- a/src/web/templates/general/view-package.html
+++ b/src/web/templates/general/view-package.html
@@ -141,7 +141,7 @@
                                     min-date="minDate"
                                     year-range="2"
                                     ng-click="openDatePicker($event)"
-                                    ng-model="order.date" />
+                                    ng-model="pickedDate" />
                             </div>
                         </div>
 
