--- a/src/web/templates/general/vendor-nav-menu-items.html
+++ b/src/web/templates/general/vendor-nav-menu-items.html
@@ -9,6 +9,7 @@
     </a>
     <ul class="cp-nav-menu-my-account" role="menu">
         <li><a href="/vendor/delivery-radiuses">Delivery radiuses</a></li>
+        <li><a href="/vendor/holidays">Holidays</a></li>
         <li><a href="{{ hubspotBase }}/agreement">Supplier agreement</a></li>
         <li><a href="/customer/change-password">Password</a></li>
         <li><a href="/logout">Log out</a></li>
